<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vpn"
            android:id="@+id/textView"
            android:textColor="#FF0000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_margin="16dp"
            android:padding="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/account" />

            <EditText
                android:background="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_account"
                android:layout_gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="16dp"
            android:padding="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/password" />

            <EditText
                android:background="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_password"
                android:layout_gravity="right"
                android:inputType="textPassword" />

        </LinearLayout>

        <TextView
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/tv_login"
            android:textColor="#FF0000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center" />
    </LinearLayout>
    <RelativeLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist"
            android:id="@+id/bt_regist"
            android:background="#000000"
            android:textColor="#FF0000"
            android:layout_gravity="left" />

        <Button
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:id="@+id/bt_copyright"
            android:background="#000000"
            android:textColor="#FF0000"
            android:layout_gravity="left" />

    </RelativeLayout>

</RelativeLayout>
